--- a/PageInscription.html
+++ b/PageInscription.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Connexion</title>
+    <title>PageInscription</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
 <div style="text-align: center;">
 
-<h1>Connexion</h1>
+<h1>Inscription</h1>
+<p>Veuillez renseigner les champs suivants :</p>
+
 <p>Identifiant :</p>
 <input type="text">
-<p>Mot de passe ;</p>
+
+
+<p>Mot de passe :</p>
 <input type="password">
+<br>
     <br>
-    <br>
-<a href="PageProfil.html">
-    <button>Connexion</button>
-</a>
+    <a href="PageProfil.html">
+        <button>Valider</button>
+    </a>
     <a href="PageAccueil.html">
         <button>Retour</button>
     </a>
 
+
 </div>
+
 </body>
 </html>
