Ajout du link pour avoir le fond d'ecran partout

--- a/PageAccueil.html
+++ b/PageAccueil.html
@@ -10,7 +10,7 @@
 <body>
 
 <div style="text-align: center;">
-    <img src="Logo_EMAFamille.jpeg" width="512">
+    <img src="Logo_EMAFamille.PNG" width="512">
     <br>
     <h1>Bienvenue</h1>
     <p> Bonjour, bienvenue sur EMA Famille</p>
