--- a/PageForum.html
+++ b/PageForum.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>PageForum</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 <div style="text-align: center;">
