--- a/PageModification.html
+++ b/PageModification.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>PageModification</title>
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 <div style="text-align: center;">
