--- a/PageAccueil.html
+++ b/PageAccueil.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>EMAFamille</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
 </head>
 
@@ -12,19 +13,41 @@
 <div style="text-align: center;">
     <img src="Logo_EMAFamille.PNG" width="512">
     <br>
-    <h1>Bienvenue</h1>
-    <p> Bonjour, bienvenue sur EMA Famille</p>
-    <a href="PageConnexion.html">
-        <button>Me connecter</button>
-    </a>
-    <a href="PageInscription.html">
-        <button>M'inscrire</button>
-    </a>
+    <h1 class="titreProfile">Bienvenue</h1>
+    <p> Parce que la famille, c'est la Famille</p>
+
+    <div class="container">
+        <div class="row g-4 py-5 row-cols-3 row-cols-lg-6" >
+    <div class="col d-grip gap-2 align-items-start">
+    </div>
+            <div class="col d-grip gap-2 align-items-start">
+            </div>
+    <div class="col d-grip gap-2 align-items-start">
+        <div>
+            <a href="PageConnexion.html" class="btn btn-primary boutons"  >
+                Me connecter
+            </a>
+        </div>
+    </div>
+
+    <div class="col d-grip gap-2 align-items-start">
+        <div>
+            <a href="PageInscription.html" class="btn btn-primary boutons"  >
+                M'inscrire
+            </a>
+        </div>
+    </div>
+    </div>
+    </div>
+
+    <div>
+        <a href="PagePresentation.html" class="btn btn-primary boutons"  >
+            En savoir plus sur EMA Famille
+        </a>
+    </div>
     <br>
     <br>
-    <a href="PagePresentation.html">
-        <button>En savoir plus sur EMA Famille</button>
-    </a>
+
 
 </div>
 
