--- a/PageForum.html
+++ b/PageForum.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>PageForum</title>
-    <link rel="stylesheet" href="Style__head_acceuil.css"/>
+    <link rel="stylesheet" href="Style_page_forum.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 <body>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
@@ -14,14 +16,12 @@
             <div class="inner-sidebar">
                 <!-- Inner sidebar header -->
                 <div class="inner-sidebar-header justify-content-center">
-                    <a href="newPost.html">
-                    <button class="btn btn-primary has-icon btn-block" type="button" data-toggle="modal" data-target="#threadModal" >
+                    <a href="newPost.html" class="btn btn-primary has-icon btn-block" type="button" data-toggle="modal" data-target="#threadModal">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus mr-2">
                             <line x1="12" y1="5" x2="12" y2="19"></line>
                             <line x1="5" y1="12" x2="19" y2="12"></line>
                         </svg>
                         NEW DISCUSSION
-                    </button>
                     </a>
                 </div>
                 <!-- /Inner sidebar header -->
@@ -310,8 +310,7 @@
         </div>
     </div>
 </div>
-<div style="text-align: center;">
-<h1>Forum</h1>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 </html>
