--- a/PageAccueil.html
+++ b/PageAccueil.html
@@ -5,29 +5,26 @@
     <meta charset="UTF-8">
     <title>EMAFamille</title>
     <link rel="stylesheet" href="Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 
 <body>
 
-<div style="text-align: center;">
+<div class="text-center">
     <img src="Logo_EMAFamille.PNG" width="512">
     <br>
     <h1>Bienvenue</h1>
     <p> Bonjour, bienvenue sur EMA Famille</p>
-    <a href="PageConnexion.html">
-        <button>Me connecter</button>
-    </a>
-    <a href="PageInscription.html">
-        <button>M'inscrire</button>
-    </a>
+    <a name="" id="" class="btn btn-dark" href="PageConnexion.html" role="button">Se Connecter</a>
+    <a name="" id="" class="btn btn-secondary" href="PageInscription.html" role="button">S'inscrire</a>
     <br>
     <br>
-    <a href="PagePresentation.html">
-        <button>En savoir plus sur EMA Famille</button>
-    </a>
-
+    <a name="" id="" class="btn btn-light" href="PagePresentation.html" role="button">En Savoir Plus</a>
+    
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
 </html>
