placement text bouton

--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>PagePresentation</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="Style.css">
+
 </head>
 <body>
 
 <div style="text-align: center;">
-  <img src="Logo_EMAFamille.jpeg" width="256">
+  <img src="Logo_EMAFamille.PNG" width="256">
   <br>
-  <h1>Présentation</h1>
-  <p>EMA Famille est un site internet conçu par Laura Bertiaux, Charlotte Houzé, Emile Delmas,
+  <h1 class="titreProfile"  >Présentation</h1>
+  <p style="text-align: center;width:40%;margin:auto">EMA Famille est un site internet conçu par Laura BertiEaux, Charlotte Houzé, Emile Delmas,
     Arthur Rubio, Florian Laporte, Simon Chalmé et Ludovic Terrasson, afin de facilter et de favoriser
     le système de parainage au sein de l'école des Mines d'Alès. Il permet aux différentes familles
     de poster des annonces visibles par tous via le forum mais également de disposer d"une page sur
@@ -26,12 +28,8 @@
   <br>
   <br>
   <a href="PageAccueil.html">
-    <button>Retour</button>
+    <button class="w-20 btn btn-primary boutons" style="margin-bottom: 10px">Retour</button>
   </a>
-
-
-
-
 
 </div>
 </body>
