--- a/PageModification.html
+++ b/PageModification.html
@@ -26,9 +26,12 @@
     <div class="invalid-feedback">
       déja mis deso
     </div>
-
+    <a href="PageProfil.html">
+      <button class="w-10 btn btn-lg btn-primary boutons" type="submit" style="margin-top: 5px; margin-bottom: 20px">Valider</button>
+    </a>
   </div>
-  <button>Valider</button>
+
+
 
   <div class="col-12">
     <label for="password" class="form-label">Nouveau mot de passe</label>
@@ -36,8 +39,11 @@
     <div class="invalid-feedback">
       déja mis deso
     </div>
+    <a href="PageProfil.html">
+      <button class="w-10 btn btn-lg btn-primary boutons" type="submit" style="margin-top: 5px; margin-bottom: 20px">Valider</button>
+    </a>
   </div>
-  <button>Valider</button>
+ 
 
   <div class="col-12">
     <label for="lastName" class="form-label">Ton Nom</label>
@@ -45,8 +51,11 @@
     <div class="invalid-feedback">
       pas valid
     </div>
+    <a href="PageProfil.html">
+      <button class="w-10 btn btn-lg btn-primary boutons" type="submit" style="margin-top: 5px; margin-bottom: 20px">Valider</button>
+    </a>
   </div>
-  <button>Valider</button>
+
 
   <div class="col-12">
     <label for="firstName" class="form-label">Ton Prénom</label>
@@ -54,8 +63,10 @@
     <div class="invalid-feedback">
       pas valid
     </div>
+    <a href="PageProfil.html">
+      <button class="w-10 btn btn-lg btn-primary boutons" type="submit" style="margin-top: 5px; margin-bottom: 20px">Valider</button>
+    </a>
   </div>
-  <button>Valider</button>
 
   <div class="col-12">
     <label for="promo" class="form-label">Ta promo</label>
@@ -63,14 +74,17 @@
     <div class="invalid-feedback">
       pas valid
     </div>
+    <a href="PageProfil.html">
+      <button class="w-10 btn btn-lg btn-primary boutons" type="submit" style="margin-top: 5px; margin-bottom: 20px">Valider</button>
+    </a>
   </div>
-  <button>Valider</button>
+
 
 
 <br>
   <br>
   <a href="PageProfil.html">
-    <button>Retour</button>
+    <button class="w-100 btn btn-lg btn-primary boutons" type="submit" style="margin-top: 5px; margin-bottom: 20px">Retour</button>
   </a>
 </div>
 </main>
