--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -14,17 +14,19 @@
   <br>
   <h1 class="titreProfile"  >Présentation</h1>
   <p style="text-align: center;width:40%;margin:auto">EMA Famille est un site internet conçu par Laura BertiEaux, Charlotte Houzé, Emile Delmas,
-    Arthur Rubio, Florian Laporte, Simon Chalmé et Ludovic Terrasson, afin de facilter et de favoriser
+    Arthur Rubio, Florian Laporte, Simon Chalmé, Ilyane Gomis et Ludovic Terrasson, afin de facilter et de favoriser
     le système de parainage au sein de l'école des Mines d'Alès. Il permet aux différentes familles
     de poster des annonces visibles par tous via le forum mais également de disposer d"une page sur
     laquelle elles peuvent se présenter et partager des photos.</p>
   <br>
-  <img src="Photo_Laura.PNG" width="128">
-  <img src="Photo_Ludo.JPG" width="128">
-  <img src="Photo_Arthur.JPG" width="128">
-  <img src="Photo_Charlotte.JPG" width="128">
-  <img src="Photo_Emile.JPG" width="128">
-  <img src="Photo_Florian.JPG" width="128">
+  <img src="Photo_Laura.jpg" width="128" class="rounded-circle">
+  <img src="Photo_Ludo 2.jpg" width="128" class="rounded-circle">
+  <img src="Photo_Arthur.JPG" width="128" class="rounded-circle">
+  <img src="Photo_Charlotte.JPG" width="128" class="rounded-circle">
+  <img src="Photo_Emile.JPG" width="128" class="rounded-circle">
+  <img src="Photo_Florian.JPG" width="128" class="rounded-circle">
+  <img src="Photo_Ilyane.jpg" width="128" class="rounded-circle">
+  <img src="Photo_Simon.jpg" width="128" class="rounded-circle">
   <br>
   <br>
   <a href="PageAccueil.html">
