lien page feed et connexion (bouton dans page connexion changé) lien page profil et feed (bouton page profil modifier et bouton page feed ajouté) - id="gedf-drop1" enlevé 2x car des erreurs

--- a/PageConnexion.html
+++ b/PageConnexion.html
@@ -35,7 +35,7 @@
             </label>
         </div>
 
-        <a href="PageProfil.html">
+        <a href="feed.html">
             <button class="w-100 btn btn-lg btn-primary boutons" type="submit">Connexion</button>
         </a>
 
