--- a/PageForum.html
+++ b/PageForum.html
@@ -25,6 +25,7 @@
                         NEW DISCUSSION
                     </a>
                 </div>
+
                 <!-- /Inner sidebar header -->
 
                 <!-- Inner sidebar body -->
@@ -44,22 +45,26 @@
                                                 <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">Unsolved</a>
                                                 <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">No replies yet</a>
                                             </nav>
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="simplebar-placeholder" style="width: 234px; height: 292px;"></div>
                         </div>
                         <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar" style="width: 0px; display: none;"></div></div>
                         <div class="simplebar-track simplebar-vertical" style="visibility: visible;"><div class="simplebar-scrollbar" style="height: 151px; display: block; transform: translate3d(0px, 0px, 0px);"></div></div>
                     </div>
                 </div>
+
                 <!-- /Inner sidebar body -->
             </div>
             <!-- /Inner sidebar -->
 
             <!-- Inner main -->
             <div class="inner-main">
+
                 <!-- Inner main header -->
                 <div class="inner-main-header">
                     <a class="nav-link nav-icon rounded-circle nav-link-faded mr-3 d-md-none" href="#" data-toggle="inner-sidebar"><i class="material-icons">arrow_forward_ios</i></a>
@@ -73,7 +78,16 @@
                     <span class="input-icon input-icon-sm ml-auto w-auto">
                     <input type="text" class="form-control form-control-sm bg-gray-200 border-gray-200 shadow-none mb-4 mt-4" placeholder="Search forum" />
                 </span>
+                    <div class="col d-grip gap-2 align-items-start">
+
+                        <div>
+                            <a href="feed.html" class="btn btn-primary boutons" style="margin-left:85%">
+                                Home
+                            </a>
+                        </div>
+                    </div>
                 </div>
+
                 <!-- /Inner main header -->
 
                 <!-- Inner main body -->
