--- a/feed.html
+++ b/feed.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>EMAFamille</title>
-    <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="Style_page_forum.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Style_page_forum.css"/>
     <style>
     body {
             background-color: #eeeeee;
@@ -48,7 +48,14 @@
 
 <nav class="navbar navbar-light bg-white">
         <a href="#" class="navbar-brand">EmaFamille</a>
+    <div class="col d-grip gap-2 align-items-start">
 
+        <div>
+            <a href="PageForum.html" class="btn btn-primary boutons" >
+                Accès Forum
+            </a>
+        </div>
+    </div>
 
         <form class="form-inline">
             <div class="input-group">
@@ -88,8 +95,6 @@
 
                 <div>
                     <a href="PageProfil.html" class="btn btn-primary " >
-                        <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-                        <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
                         Accès Profil
                     </a>
                 </div>
