navbars plus longues

--- a/PageModification.html
+++ b/PageModification.html
@@ -14,14 +14,16 @@
 </head>
 
 
-<body class="text-center">
-<main class="form-signin w-100 m-auto">
+<body class="text-center ">
+<main class=" w-50 m-auto">
+
 <div style="text-align: center;">
 
   <h1 class="titreProfile">Modification du Profil</h1>
 
-  <div class="col-12">
+
     <label for="username" class="form-label">Nouvel identifiant</label>
+  <div class="col d-grip gap-2 align-items-start">
     <input type="text" class="form-control" id="username" placeholder="id" required>
     <div class="invalid-feedback">
       déja mis deso
