page famille complète il faut juste ahouter quelques fonctionnalitées

--- a/feed.html
+++ b/feed.html
@@ -329,7 +329,7 @@
                         <img src="téléchargement (1).jfif" alt="mec bourré">
                         <br/>
                         <br/>
-                        <a href="#" class="card-link">Profil de famille</a>
+                        <a href="PageFamille.html" class="card-link">Profil de famille</a>
                         <a href="#" class="card-link"><i class="fa fa-google-drive"></i> Drive</a>
                     </div>
                 </div>
